--- a/client/index.html
+++ b/client/index.html
@@ -29,10 +29,9 @@
         <link href="css/styles.css" rel="stylesheet">
     </head>
     <body class="home">
-<!--         <div class="container">
-            <div class="login-page clearfix" id="login-page">
-            </div>
-        </div> -->
-        <div id='friend-manager-container'></div>
+        <div class="container">
+            <div class="login-page clearfix" id="login-page"></div>
+            <div id='friend-manager-container'></div>
+        </div>
     </body>
 </html>
