--- a/client/index.html
+++ b/client/index.html
@@ -2,9 +2,12 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <script src="http://code.jquery.com/jquery-2.1.1.min.js"></script>
-        <script src="https://cdn.auth0.com/js/lock-7.js"></script>
 
+        <!-- jQuery -->
+        <script src="http://code.jquery.com/jquery-2.1.1.min.js"></script>
+        <!-- Auth0 -->
+        <script src="https://cdn.auth0.com/js/lock-7.js"></script>
+        
         <script src="//use.typekit.net/iws6ohy.js"></script>
         <script>try{Typekit.load();}catch(e){}</script>
 
