--- a/src/index.html
+++ b/src/index.html
@@ -14,8 +14,6 @@
         <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
     </head>
     <body class="home">
-        <div class="container">
-            <div class="login-page clearfix" id="login-page"></div>
-        </div>
+        <div id="app"></div>
     </body>
 </html>
