--- a/src/client/html-templates/home.html
+++ b/src/client/html-templates/home.html
@@ -46,9 +46,10 @@
             <button class="btn btn-default" id="invite-button">INVITE FRIENDS</button> 
           </div>
         </div>
-
         <div class="profile-photo-container">
-          <div><img class="profile-photo"src="../img/mipmap-xhdpi/ic_launcher.png"></div>
+          <div class="thumbnail profile-photo">
+            <img src="../img/gyftee-icon.png" alt="user profile photo"/>
+          </div>
         </div>
 
 
