complete decent HTML/CSS draft of home

--- a/src/client/html-templates/home.html
+++ b/src/client/html-templates/home.html
@@ -26,7 +26,7 @@
         </button>
 
         <div class="navbar-brand">
-          <a href="#"><img class="brand-icon" src="../img/gyftee-icon.png"/></a>
+          <a class="white-font" href="#"><img class="brand-icon" src="../img/gyftee-icon.png"/>Gyftee</a>
         </div>
 
       <div class="collapse navbar-collapse">
@@ -41,7 +41,7 @@
 
     <div class="welcome-container container flex-container">
         <div class="welcome">
-          <div class="greeting-text proxima teal-font bold">Welcome, <div class="firstname">Firstname</div></div>
+          <div class="greeting-text proxima teal-font bold">Welcome, <div class="firstname">Gorgeous</div></div>
           <div>
             <button class="btn btn-default" id="invite-button">INVITE FRIENDS</button> 
           </div>
@@ -51,45 +51,54 @@
             <img src="../img/gyftee-icon.png" alt="user profile photo"/>
           </div>
         </div>
-
-
     </div> <!-- /welcome-container --> 
 
-<!-- TODO: Refactor table as flex box divs to enable vertical centering without hacks -->
-
+    <!-- Start of bday list --> 
     <div class="bday-list-container">
       <div class="bday-list-header">UPCOMING BIRTHDAYS</div>
       <div class="bday-list-body seafoam">
-        <div class="row bday-row">
-          <div><a href="#"><i class="glyphicon glyphicon-heart heart"></i></a></div>
+        <!-- friend row items -->
+        <div class="bday-row">
+          <div class="heart-div"><a href="#"><i class="glyphicon glyphicon-heart heart"></i></a></div>
           <div class="bday-list-item"><a id="friendname" href="#">Taylor Swift</a></div>
+          <div class="date-container">
+            <div>01/01</div>
+          </div>
         </div>
-      </div>
 
-        <!--   <tr class="bday-listing">
-            <td class="heart-div"><a href="#"><i class="glyphicon glyphicon-heart heart"></i></a></td>
-            <td><a id="friendname" href="#">Taylor Swift</a></td>
-            <td>01/01</td>
-          </tr>
+        <div class="bday-row">
+          <div class="heart-div"><a href="#"><i class="glyphicon glyphicon-heart heart"></i></a></div>
+          <div class="bday-list-item"><a id="friendname" href="#">Gaga, Lady</a></div>
+          <div class="date-container">
+            <div>01/01</div>
+          </div>
+        </div>
 
-          <tr class="bday-listing">
-            <td class="heart-div"><a href="#"><i class="glyphicon glyphicon-heart heart"></i></a></td>
-            <td>Macklemore</td>
-            <td>01/01</td>
-          </tr>
+        <div class="bday-row">
+          <div class="heart-div"><a href="#"><i class="glyphicon glyphicon-heart heart"></i></a></div>
+          <div class="bday-list-item"><a id="friendname" href="#">John Paul George</a></div>
+          <div class="date-container">
+            <div>01/01</div>
+          </div>
+        </div>
 
-          <tr class="bday-listing">
-            <td class="heart-div"><a href="#"><i class="glyphicon glyphicon-heart heart"></i></a></td>
-            <td><a id="friendname" href="#">Gaga, Lady</a></td>
-            <td>01/01</td>
-          </tr>
+        <div class="bday-row">
+          <div class="heart-div"><a href="#"><i class="glyphicon glyphicon-heart heart"></i></a></div>
+          <div class="bday-list-item"><a id="friendname" href="#">Britney Spears</a></div>
+          <div class="date-container">
+            <div>01/01</div>
+          </div>
+        </div>
 
-          <tr class="bday-listing">
-            <td class="heart-div"><a href="#"><i class="glyphicon glyphicon-heart heart"></i></a></td>
-            <td><a id="friendname" href="#">Cherilyn Sarkisian</a></td>
-            <td>01/01</td>
-          </tr> -->
-      
+        <div class="bday-row">
+          <div class="heart-div"><a href="#"><i class="glyphicon glyphicon-heart heart"></i></a></div>
+          <div class="bday-list-item"><a id="friendname" href="#">The Artist Formerly Known as Prince</a></div>
+           <div class="date-container">
+             <div>01/01</div>
+           </div>
+        </div>
+
+      </div> <!-- bday-list-body -->      
     </div> <!-- /bday-list-container -->    
    
 
