Update path to css stylesheet

--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,7 @@
         <!-- font awesome from BootstrapCDN -->
         <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">
         <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
+        <link rel="stylesheet" href="src/client/css/styles.css">
     </head>
     <body class="home">
         <div id="app"></div>
