--- a/src/client/html-templates/home.html
+++ b/src/client/html-templates/home.html
@@ -26,7 +26,7 @@
         </button>
 
         <div class="navbar-brand">
-          <a class="white-font" href="#"><img class="brand-icon" src="../img/gyftee-icon.png"/>Gyftee</a>
+          <a class="white-font" href="#"><img class="brand-icon" src="../img/g-icon.png"/>Gyftee</a>
         </div>
 
       <div class="collapse navbar-collapse">
