--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <!-- jQuery -->
         <script src="http://code.jquery.com/jquery-2.1.1.min.js"></script>
+        <script src="http://cdn.auth0.com/js/lock-7.min.js"></script>
         <!-- Auth0 -->
         <script src="https://cdn.auth0.com/js/lock-7.js"></script>
         <script src="//use.typekit.net/iws6ohy.js"></script>
