--- a/src/client/html-templates/recommended-gifts.html
+++ b/src/client/html-templates/recommended-gifts.html
@@ -9,7 +9,7 @@
   <!-- font awesome from BootstrapCDN -->
   <link href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">
   <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
-  <link href="../css/styles.css" rel="stylesheet">
+  <link href="../../css/styles.css" rel="stylesheet">
 </head>
 
 <body>
