--- a/src/client/html-templates/login.html
+++ b/src/client/html-templates/login.html
@@ -9,11 +9,13 @@
   <!-- font awesome from BootstrapCDN -->
   <link href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">
   <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
+          <link href='https://fonts.googleapis.com/css?family=Lato:400,300,700' rel='stylesheet' type='text/css'>
+
   <link href="../css/styles.css" rel="stylesheet">
 </head>
 
 <body>
-  <div class="login-container responsive viewport flex-container">
+  <div class="login-container responsive flex-container">
 
     <div>
       <div class="logo">
