--- a/src/index.html
+++ b/src/index.html
@@ -4,18 +4,19 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <!-- jQuery -->
-        <script src="http://code.jquery.com/jquery-2.1.1.min.js"></script>
-        <script src="http://cdn.auth0.com/js/lock-7.min.js"></script>
+        <script src="src/client/scripts/jquery-2.1.1.min.js"></script>
+        <script src="src/client/scripts/lock-7.min.js"></script>
         <!-- Auth0 -->
-        <script src="//use.typekit.net/iws6ohy.js"></script>
+        <script src="src/client/scripts/iws6ohy.js"></script>
         <script>try{Typekit.load();}catch(e){}</script>
         <!-- font awesome from BootstrapCDN -->
-        <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">
-        <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
-        <link href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.3.15/slick.css" rel="stylesheet">
-        <link rel="stylesheet" href="src/client/css/styles.css">
+        <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet">
+        <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" rel="stylesheet">
+        <link href="src/client/css/slick.css" rel="stylesheet">
+        <link href="src/client/css/styles.css" rel="stylesheet">
     </head>
     <body class="home">
         <div id="app"></div>
+        <script src="src/client/scripts/modernizr.js"></script>
     </body>
 </html>
