--- a/src/index.html
+++ b/src/index.html
@@ -10,10 +10,11 @@
         <script src="src/client/scripts/iws6ohy.js"></script>
         <script>try{Typekit.load();}catch(e){}</script>
         <!-- font awesome from BootstrapCDN -->
-        <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet">
-        <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" rel="stylesheet">
-        <link href="src/client/css/slick.css" rel="stylesheet">
-        <link href="src/client/css/styles.css" rel="stylesheet">
+        <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">
+        <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
+        <link href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.3.15/slick.css" rel="stylesheet">
+        <link href='https://fonts.googleapis.com/css?family=Lato:400,300,700' rel='stylesheet' type='text/css'>
+        <link rel="stylesheet" href="src/client/css/styles.css">
     </head>
     <body class="home">
         <div id="app"></div>
