Style the gift detail page

--- a/src/client/html-templates/gift-detail.html
+++ b/src/client/html-templates/gift-detail.html
@@ -22,8 +22,8 @@
             <div class="add-to-list">
             <button class="add-to-list-button">
               <a href="#" ><i class="glyphicon add-heart glyphicon-heart"></i></a> ADD TO LIST
-            </div>
             </button>
+            </div>
           </div>
           <div class="book-thumbnail">
             <a href="#"><img src="http://ecx.images-amazon.com/images/I/518olcSShBL._SL160_.jpg" /></a>
@@ -33,10 +33,10 @@
         <div class="book-text-container">
           <div class="book-title">Sense and Sensibility</div>
           <div class="book-author">Jane Austen</div>
-          <div>
+          <!-- <div> -->
             <div class="book-price">$6.99</div>
             <div class="book-binding">(Paperback)</div>
-          </div>
+          <!-- </div> -->
         </div>
       <!-- </div> -->
 
