--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,8 @@
         <!-- jQuery -->
         <script src="src/client/scripts/jquery-2.1.1.min.js"></script>
         <script src="src/client/scripts/lock-7.min.js"></script>
+        <!-- Facebook SDK -->
+        <script type="text/javascript" src="src/config/sdk.js"></script>
         <!-- Auth0 -->
         <script src="src/client/scripts/iws6ohy.js"></script>
         <script>try{Typekit.load();}catch(e){}</script>
@@ -17,6 +19,54 @@
         <link rel="stylesheet" href="src/client/css/styles.css">
     </head>
     <body class="home">
+        <script>
+
+            FB.init({
+              appId: '452664661572497',
+              channelUrl: '../../config/channel.html', /* Adding a Channel File improves the performance of the javascript SDK */
+              status: true,   /* Set if you want to check the authentication status at the start up of the app */
+              cookie: true,   /* Enable cookies to allow the server to access the session */
+              xfbml: true,    /* Parse XFBML */
+              version: 'v2.4'
+            });
+
+        // (function(d){
+        //   // load the Facebook javascript SDK
+        //   var js,
+        //   id = 'facebook-jssdk',
+        //   ref = d.getElementsByTagName('script')[0];
+
+        //   if (d.getElementById(id)) {
+        //     return;
+        //   }
+
+        //   js = d.createElement('script');
+        //   js.id = id;
+        //   js.async = true;
+        //   js.src = "./config/sdk.js";
+        //   ref.parentNode.insertBefore(js, ref);
+        //   }(document));
+
+        // $(document).on(
+        // 'fbload',  //  <---- HERE'S OUR CUSTOM EVENT BEING LISTENED FOR
+        //     function(){
+        //     //some code that requires the FB object
+        //     //such as...
+        //     alert('HEY')
+        //     FB.getLoginStatus(function(res){
+        //         if( res.status == "connected" ){
+        //             FB.api('/me', function(fbUser) {
+        //                 console.log("Open the pod bay doors, " + fbUser.name + ".");
+        //             });
+        //         }
+        //     });
+        // });
+
+        //////////////////////////////////////////
+
+
+        </script>
+
         <div id="app"></div>
         <script src="src/client/scripts/modernizr.js"></script>
     </body>
