--- a/src/index.html
+++ b/src/index.html
@@ -5,12 +5,16 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <!-- jQuery -->
         <script src="src/client/scripts/jquery-2.1.1.min.js"></script>
-        <script src="src/client/scripts/lock-7.min.js"></script>
         <!-- Facebook SDK -->
         <script type="text/javascript" src="src/config/sdk.js"></script>
+        <!-- React-Bootstrap JS -->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/react-bootstrap/0.25.1/react-bootstrap.min.js"></script>
         <!-- Auth0 -->
+        <script src="src/client/scripts/lock-7.min.js"></script>
+        <!-- ? -->
         <script src="src/client/scripts/iws6ohy.js"></script>
-        <script>try{Typekit.load();}catch(e){}</script>
+        <!-- ? -->
+        <script>try{Typekit.load()}catch(e){}</script>
         <!-- font awesome from BootstrapCDN -->
         <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">
         <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
