fixing the gifts reducer to be an array

--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,7 @@
         <script src="src/client/scripts/lock-7.min.js"></script>
         <!-- ? -->
         <script src="src/client/scripts/iws6ohy.js"></script>
+
         <!-- ? -->
         <script>try{Typekit.load()}catch(e){}</script>
         <!-- font awesome from BootstrapCDN -->
@@ -37,6 +38,7 @@
         </script>
 
         <div id="app"></div>
+        <script src="http://underscorejs.org/underscore-min.js"></script>
         <script src="src/client/scripts/modernizr.js"></script>
     </body>
 </html>
